--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
-        "illuminate/support": "~5.6",
-        "illuminate/http": "~5.6",
+        "php": "^7.1",
+        "illuminate/support": "~5.6|~5.7|~5.8|^6.0",
+        "illuminate/http": "~5.6|~5.7|~5.8|^6.0",
         "guzzlehttp/guzzle": "^6.3"
     },
     "autoload": {
