--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php": "^7.1",
         "illuminate/support": "~5.6|~5.7|~5.8|^6.0",
         "illuminate/http": "~5.6|~5.7|~5.8|^6.0",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
