--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "illuminate/support": "~5.6|~5.7|~5.8|^6.0|^7.0",
-        "illuminate/http": "~5.6|~5.7|~5.8|^6.0|^7.0",
-        "guzzlehttp/guzzle": "^6.3",
+        "php": "^7.4",
+        "illuminate/support": "^5.6|^6.0|^7.0|^8.0",
+        "illuminate/http": "^5.6|^6.0|^7.0|^8.0",
+        "guzzlehttp/guzzle": "^7.0",
         "ext-json": "*"
     },
     "autoload": {
