--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,9 @@
         "psr-4": {
             "MichielKempen\\LaravelHttpClient\\": "src"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "orchestra/testbench": "^6.0"
     }
 }
