--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "Laravel HTTP client"
     ],
     "homepage": "https://github.com/michielkempen/laravel-http-client",
+    "type": "library",
     "license": "MIT",
     "authors": [
         {
@@ -31,5 +32,7 @@
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "orchestra/testbench": "^6.0"
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
