--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "illuminate/support": "^7.0|^8.0",
-        "illuminate/http": "^7.0|^8.0",
+        "illuminate/support": "^7.0|^8.0|^9.0",
+        "illuminate/http": "^7.0|^8.0|^9.0",
         "guzzlehttp/guzzle": "^7.0",
         "ext-json": "*",
         "symfony/psr-http-message-bridge": "^2.1"
@@ -30,6 +30,6 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "orchestra/testbench": "^6.0"
+        "orchestra/testbench": "^7.0"
     }
 }
