--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "illuminate/support": "^7.0|^8.0|^9.0",
-        "illuminate/http": "^7.0|^8.0|^9.0",
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
+        "illuminate/http": "^7.0|^8.0|^9.0|^10.0",
         "guzzlehttp/guzzle": "^7.0",
         "ext-json": "*",
         "symfony/psr-http-message-bridge": "^2.1"
